[project]
name = "fragdenstaat_de"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
description = "FragDenStaat.de theme for Froide install"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fragdenstaat_de"]


[tool.ruff]
exclude = ["migrations", "build", "node_modules"]

[tool.ruff.lint]
ignore = ["E501", "C901"]
select = ["C", "E", "F", "W", "B", "I001"]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.mccabe]
max-complexity = 10


[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "django",
  "third-party",
  "froide",
  "first-party",
  "local-folder",
]
default-section = "third-party"
known-local-folder = ["froide"]

[tool.ruff.lint.isort.sections]
django = ["django"]
froide = ["froide"]

[tool.coverage.run]
source = "fragdenstaat_de"
omit = ["*/migrations/*", "*/wsgi.py", "*/asgi.py"]
plugins = ["django_coverage_plugin"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover"]


[tool.pytest.ini_options]
DJANGO_CONFIGURATION = "Test"
DJANGO_SETTINGS_MODULE = "fragdenstaat_de.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["fragdenstaat_de", "tests"]
addopts = ["--reuse-db", "-m", "not stripe"]
markers = ["stripe: Run donation tests with stripe test keys"]
